fixed the card flickering

--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -43,6 +43,7 @@
 .front-card {
   transform: rotateY(180deg);
   background-size: 100% 100%;
+  backface-visibility: hidden;
 }
 
 #ace {
